bynkc/tests/fixtures/negative/93_intermediate_effect_no_await/input.bynk
commons demo {
  fn run() -> Effect[Int] {
    Effect.pure(1)
    2
  }
}
